# graphmodel-python

./: .gitignore  BUILD.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  README.md  SECURITY.md  TYPE_CHECKING_FIXES.md  TYPE_CHECKING_FIXES_FINAL.md  UV_DEVELOPMENT.md  VERSION  mypy.ini  plan.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
examples/: auto_field_usage.py  basic_usage.py  database_usage.py  embedded_vs_related_implementation.py  linq_style_querying.py  neo4j_provider_demo.py  new_api_example.py  query_capabilities_comparison.py  queryable_api_demo.py  querying_examples.py
graph_model/: __init__.py
graph_model-stubs/: __init__.pyi  attributes.pyi  core.pyi  providers.pyi  querying.pyi
graph_model/attributes/: __init__.py  annotations.py  decorators.py  fields.py
graph_model/core/: __init__.py  entity.py  exceptions.py  graph.py  model_registry.py  node.py  relationship.py  transaction.py  type_detection.py
graph_model/providers/: __init__.py
graph_model/providers/neo4j/: __init__.py  _types.py  aggregation_executor.py  async_queryable.py  cypher_builder.py  driver.py  graph.py  node_queryable.py  relationship_queryable.py  serialization.py  transaction.py  traversal_executor.py
graph_model/querying/: __init__.py  aggregation.py  async_streaming.py  queryable.py  traversal.py
tests/: conftest.py  test_basic_functionality.py  test_basic_node_operations.py  test_compatibility_and_features.py  test_complex_queries.py  test_data_types.py  test_embedded_fields.py  test_error_handling.py  test_neo4j_provider_complete.py  test_node_querying.py  test_queryable_api.py  test_related_node_fields.py  test_relationship_operations.py
tests/integration/: README.md  test_integration_embedded_fields.py  test_integration_error_handling.py  test_integration_related_node_fields.py  test_node_crud.py  test_querying.py  test_relationship_crud.py
